--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 :root {
-    --primary: rgb(148, 223, 248);
-    --bg: #010101
+    --primary: #96B6C5;
+    --bg: #F7FFE5;
 }
 
 * {
     margin: 0;
-    padding: 0;
+    padding: 0; 
     box-sizing: border-box;
     outline: none;
     border: none;
@@ -19,7 +19,7 @@ html {
 body {
     font-family: 'poppins', sans-serif;
     background-color: var(--bg);
-    color: #fff; 
+    color: #000000;
     /* min-height: 2500px; */
 }
 
@@ -51,9 +51,9 @@ body {
 
 .navbar .navbar-nav a {
     color: #fff;
-    display: inline-block;
+    display:inline-block;
     font-size: 1.3rem;
-    margin: 0 1rem;
+    margin:  1rem;
 }
 
 .navbar .navbar-nav a:hover {
@@ -92,7 +92,7 @@ body {
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background-image: url('../img/2.jpg');
+    background-image: url('../img/bg.jpeg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -106,7 +106,7 @@ body {
     width: 100%;
     height: 30%;
     bottom: 0;
-    background: linear-gradient(0deg, rgba(1,1,3,1) 8%, rgba(255, 255, 255, 0) 55%);
+    background: linear-gradient(0deg, rgb(251, 251, 253) 8%, rgba(236, 236, 236, 0) 55%);
 }
 
 .hero .content {
@@ -127,12 +127,12 @@ body {
 }
 
 .hero .content p {
-    font-size: 1.6rem;
+    font-size: 1.5rem;
     margin-top: 1rem;
     line-height: 1.4;
-    font-weight: 100;
+    font-weight: 300;
     text-shadow: 1px 1px 1px rgba(1, 1, 3, 0.5);
-    mix-blend-mode: difference;
+    /* mix-blend-mode: difference; */
 }
 
 .hero .content .cts {
@@ -140,7 +140,7 @@ body {
     display: inline-block;
     padding: 1rem 3rem;
     font-size: 1.4rem;
-    color: #fff;
+    color: #080808;
     background-color: var(--primary);
     border-radius: 0.5rem;
     box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
@@ -172,7 +172,7 @@ body {
 }
 
 .about .row .about-img {
-    flex: 1 1 45rem;
+    flex: 1 1 15rem;
 }
 
 .about .row .about-img img {
@@ -180,19 +180,19 @@ body {
 }
 
 .about .row .content {
-    flex: 1 1 35rem;
-    padding: 0 1rem;
+    flex: 2 2 45rem;
+    padding: 0 5rem;
 }
 
 .about .row .content h3 {
-    font-size: 1.8rem;
+    font-size: 1.9rem;
     margin-bottom: 1rem;
 }
 
 .about .row .content p {
     margin-bottom: 0.8rem;
     font-size: 1.4rem;
-    font-weight: 100;
+    font-weight: 400;
     line-height: 1.6;
 }
 
@@ -207,8 +207,9 @@ body {
     text-align: center;
     max-width: 30rem;
     margin: auto;
-    font-weight: 100;
+    font-weight: 400;
     line-height: 1.6;
+    font-size: 1.4rem;
 }
 
 .menu .row {
@@ -225,11 +226,14 @@ body {
 
 .menu .row .menu-card img {
     border-radius: 50%;
-    width: 80;
+    object-fit: cover;
+    width: 200px;
+    height: 200px;
 }
 
 .menu .row .menu-card .menu-card-title {
     margin-top: 1rem auto 0.5rem;
+    font-size: 1.6rem;
 }
 
 /* Contact Section */
@@ -356,7 +360,7 @@ footer .credit a {
     }
 
     .navbar .navbar-nav a {
-        color: var(--bg);
+        color: #000000;
         display: block;
         margin: 1.5rem;
         padding: 0.5rem;
